--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,11 +4,10 @@ dotenv
 uvicorn
 typing
 typing_extensions
-# langgraph
-# langchain
-# langchain_openai
-# langchain_huggingface
-# langchain_community
-# faiss-cpu
 pymupdf
 python-multipart
+io
+Pillow
+PyMuPDF
+python-dotenv
+landingai-ade
