--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.5",
     "react-scroll": "^1.9.3",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
