add dependencies for rag service

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,3 +11,8 @@ python-dotenv
 landingai-ade
 langchain-google-genai
 langchain
+
+## rag service dependencies
+sentence_transformers
+faiss-cpu
+google-genai
