--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ python-dotenv
 landingai-ade
 langchain-google-genai
 langchain
+langchain-community
 
 ## rag service dependencies
 sentence_transformers
