--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,9 +11,10 @@ python-dotenv
 landingai-ade
 langchain-google-genai
 langchain
-langchain-community
 
 ## rag service dependencies
 sentence_transformers
+langchain-huggingface
+langchain-community
 faiss-cpu
 google-genai
