updated req txt

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,7 +9,7 @@ Pillow
 PyMuPDF
 python-dotenv
 landingai-ade
-langchain-google-genai
+opencv-python
 
 # image fraud engine dependencies
 opencv-python
